--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="AppTheme" parent="@style/Theme.AppCompat">
-		<item name="colorPrimary">@color/colorPrimary</item>
+		<item name="colorPrimary">@drawable/action_bar_background</item>
 		<item name="colorPrimaryDark">@color/colorPrimaryDark</item>
 		<item name="colorAccent">@color/colorAccent</item>
-		<item name="actionModeBackground">@color/actionModeBackground</item>
+		<item name="actionModeBackground">@drawable/action_bar_background</item>
 		<item name="android:navigationBarColor">@color/navigationColor</item>
 		<item name="android:windowBackground">@color/windowBackground</item>
 	</style>
