--- a/app/src/main/res/drawable/action_bar_background.xml
+++ b/app/src/main/res/drawable/action_bar_background.xml
@@ -5,9 +5,9 @@
             <solid android:color="@color/colorAccent" />
         </shape>
     </item>
-    <item android:bottom="2dp">
+    <item android:bottom="3dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/basicColor" />
+            <solid android:color="@color/colorPrimary" />
         </shape>
     </item>
 </layer-list>
