--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,6 @@
 	<color name="itemBackground">#878787</color>
 	<color name="selectorColor">@color/itemBackground</color>
 	<color name="pressedColor">@color/itemBackground</color>
-	<color name="receivedMessage">#003000</color>
-	<color name="sentMessage">#300000</color>
+	<color name="receivedMessage">#00B000</color>
+	<color name="sentMessage">#FFFFFF</color>
 </resources>
