Latest support library bug

--- a/app/src/main/res/layout/fragment_messenger.xml
+++ b/app/src/main/res/layout/fragment_messenger.xml
@@ -7,7 +7,7 @@
 		android:layout_height="wrap_content"
 		android:layout_alignParentBottom="true"
 		android:layout_centerHorizontal="true">
-		
+
         <EditText 
 			android:gravity="center" 
 			android:id="@+id/mainServer" 
@@ -19,7 +19,7 @@
 			android:layout_weight="35.0"
 			android:inputType="textNoSuggestions|textShortMessage"
 		/>
-	
+
         <EditText 
 			android:gravity="center" 
 			android:id="@+id/mainPort"
@@ -31,7 +31,7 @@
 			android:layout_weight="14.0"
 			android:inputType="number"
 		/>
-	
+
         <EditText 
 			android:id="@+id/mainEditText"
 			android:layout_width="0dp" 
@@ -40,7 +40,7 @@
 			android:layout_weight="30.0"
 			android:inputType="textMultiLine"
 		/>
-	
+
         <Button 
 			android:id="@+id/mainButton"
 			android:background="@drawable/borderless_layout"
@@ -50,9 +50,9 @@
 			android:text="OK"
 			android:layout_weight="4.0" 
 		/>
-	
+
     </LinearLayout>
-	
+
     <View
 		android:id="@+id/seperator"
 		android:background="@color/colorAccent"
@@ -60,13 +60,14 @@
 		android:layout_height="2dp"
 		android:layout_above="@+id/mainLinearLayout" 
 	/>
-		
-    <ListView 
+
+	<ListView 
 		android:id="@+id/mainListView" 
-		android:layout_width="match_parent"
+		android:layout_width="wrap_content"
 		android:layout_height="wrap_content" 
-		android:divider="@color/colorPrimaryDark" 
-		android:layout_above="@+id/seperator" 
-		android:layout_alignParentTop="true" 
+		android:divider="@color/colorPrimaryDark"
+		android:layout_above="@+id/seperator"
+		android:layout_alignParentTop="true"
 	/>
+
 </RelativeLayout>
