--- a/app/src/main/res/drawable/action_bar_background.xml
+++ b/app/src/main/res/drawable/action_bar_background.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorAccent" />
+            <solid android:color="@color/seperatorColor" />
         </shape>
     </item>
     <item android:bottom="3dp">
