--- a/app/src/main/res/layout/fragment_messenger.xml
+++ b/app/src/main/res/layout/fragment_messenger.xml
@@ -2,7 +2,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:paddingLeft="15dp" android:paddingRight="15dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
     <LinearLayout 
 		android:id="@+id/mainLinearLayout"
-		android:padding="2dp" 
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:layout_alignParentBottom="true"
@@ -43,19 +42,16 @@
 
         <Button 
 			android:id="@+id/mainButton"
-			android:background="@drawable/borderless_layout"
+			android:background="@drawable/send_button_drawable"
 			android:visibility="gone"
-			android:layout_width="0dp"
-			android:layout_height="30dp"
-			android:text="OK"
-			android:layout_weight="4.0" 
-		/>
+			android:layout_width="50dp"
+			android:layout_height="50dp" />
 
     </LinearLayout>
 
     <View
 		android:id="@+id/seperator"
-		android:background="@color/colorAccent"
+		android:background="@color/seperatorColor"
 		android:layout_width="wrap_content"
 		android:layout_height="2dp"
 		android:layout_above="@+id/mainLinearLayout" 
