--- a/app/src/main/res/layout-large-v4/list_pair.xml
+++ b/app/src/main/res/layout-large-v4/list_pair.xml
@@ -1,31 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout 
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="vertical"
-	android:background="@drawable/checkable_item_background" 
-	android:padding="12dp"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent">
-	
-    <TextView 
-		android:textSize="16sp"
-		android:textStyle="bold" 
-		android:ellipsize="end"
-		android:id="@+id/list_text" 
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content" 
-		android:singleLine="true"
-		style="@style/primaryText"
-	/>
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/checkable_item_background"
+    android:orientation="vertical"
+    android:padding="15dp">
 
-    <TextView 
-		android:textSize="14sp" 
-		android:id="@+id/list_text2" 
-		android:visibility="gone" 
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:singleLine="true"
-		android:layout_below="@+id/list_text"
-		style="@style/secondaryText" 
-	/>
-</RelativeLayout>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/list_text3"
+            style="@style/secondaryText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:textSize="15sp"
+            android:textStyle="italic"
+            />
+
+        <TextView
+            android:id="@+id/list_text"
+            style="@style/primaryText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_toLeftOf="@+id/list_text2"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            />
+
+    </RelativeLayout>
+
+    <TextView
+        android:id="@+id/list_text2"
+        style="@style/secondaryText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:singleLine="true"
+        android:textSize="14sp"
+        android:visibility="gone"
+        />
+
+</LinearLayout>
