--- a/app/src/main/res/layout/list_message.xml
+++ b/app/src/main/res/layout/list_message.xml
@@ -12,7 +12,9 @@
 		android:textStyle="bold" 
 		android:id="@+id/list_text" 
 		android:layout_width="wrap_content" 
-		android:layout_height="wrap_content" 
+		android:layout_height="wrap_content"
+		android:maxLines="1"
+		android:ellipsize="end"
 		style="@style/primaryText" 
 	/>
 
