--- a/app/src/main/res/layout/list_json.xml
+++ b/app/src/main/res/layout/list_json.xml
@@ -16,7 +16,7 @@
 		android:paddingRight="5dp" 
 		android:layout_width="wrap_content" 
 		android:layout_height="wrap_content"
-		android:singleLine="true"
+		android:maxLines="1"
 		android:layout_alignParentLeft="true"
 		android:layout_centerVertical="true"
 		style="@style/primaryText"
