--- a/app/src/main/res/drawable/text_box_background.xml
+++ b/app/src/main/res/drawable/text_box_background.xml
@@ -2,12 +2,14 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <stroke android:width="3dp" android:color="@color/colorPrimary" />
+            <stroke
+                android:width="3dp"
+                android:color="@color/colorPrimary"/>
         </shape>
     </item>
     <item android:top="3dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimaryDark" />
+            <solid android:color="@color/colorPrimaryDark"/>
         </shape>
     </item>
 </layer-list>
