--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout 
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="horizontal" 
-	android:layout_width="match_parent"
-	android:layout_height="match_parent">
-	
-    <fragment 
-		android:name="com.genonbeta.CoolSocket.test.fragment.MessengerFragment" 
-		android:id="@+id/main_messenger_fragment" 
-		android:tag="messengerFragment" 
-		android:layout_width="match_parent" 
-		android:layout_height="match_parent"
-	/>
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
+
+    <fragment
+        android:id="@+id/main_messenger_fragment"
+        android:name="com.genonbeta.CoolSocket.test.fragment.MessengerFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:tag="messengerFragment"
+        />
 
 </LinearLayout>
