--- a/app/src/main/res/layout/layout_new_template.xml
+++ b/app/src/main/res/layout/layout_new_template.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout 
-	xmlns:android="http://schemas.android.com/apk/res/android" 
-	android:orientation="vertical" 
-	android:padding="@dimen/abc_dialog_padding_material" 
-	android:layout_width="wrap_content" 
-	android:layout_height="wrap_content">
-	
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="@dimen/abc_dialog_padding_material">
+
     <EditText
-		android:id="@+id/layout_new_template_edit_text" 
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_alignParentLeft="true" 
-		android:layout_alignParentRight="true" 
-	/>
-		
+        android:id="@+id/layout_new_template_edit_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        />
+
 </RelativeLayout>
