--- a/app/src/main/res/layout/list_json.xml
+++ b/app/src/main/res/layout/list_json.xml
@@ -1,38 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout 
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:paddingLeft="@dimen/abc_dialog_padding_material" 
-	android:paddingTop="10dp" 
-	android:paddingRight="@dimen/abc_dialog_padding_material" 
-	android:paddingBottom="10dp" 
-	android:layout_width="match_parent"
-	android:layout_height="match_parent">
-	
-    <TextView 
-		android:textSize="16sp"
-		android:textStyle="bold"
-		android:ellipsize="end"
-		android:id="@+id/list_text"
-		android:paddingRight="5dp" 
-		android:layout_width="wrap_content" 
-		android:layout_height="wrap_content"
-		android:maxLines="1"
-		android:layout_alignParentLeft="true"
-		android:layout_centerVertical="true"
-		style="@style/primaryText"
-	/>
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="10dp"
+    android:paddingLeft="@dimen/abc_dialog_padding_material"
+    android:paddingRight="@dimen/abc_dialog_padding_material"
+    android:paddingTop="10dp">
 
-    <TextView 
-		android:textSize="14sp" 
-		android:gravity="right" 
-		android:id="@+id/list_text2" 
-		android:layout_width="wrap_content" 
-		android:layout_height="wrap_content" 
-		android:singleLine="true" 
-		android:layout_toRightOf="@+id/list_text" 
-		android:layout_alignParentRight="true" 
-		android:layout_centerVertical="true" 
-		style="@style/secondaryText" 
-	/>
+    <TextView
+        android:id="@+id/list_text"
+        style="@style/primaryText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:paddingRight="5dp"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        />
+
+    <TextView
+        android:id="@+id/list_text2"
+        style="@style/secondaryText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@+id/list_text"
+        android:gravity="right"
+        android:singleLine="true"
+        android:textSize="14sp"
+        />
 
 </RelativeLayout>
