--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="basicColor">#303039</color>
-    <color name="colorPrimary">#404049</color>
-    <color name="colorPrimaryDark">@color/colorPrimary</color>
+    <color name="basicColor">#202020</color>
+    <color name="colorPrimary">#292929</color>
+    <color name="colorPrimaryDark">@color/basicColor</color>
     <color name="windowBackground">@color/basicColor</color>
-    <color name="colorAccent">#F0F0F9</color>
-    <color name="seperatorColor">#505059</color>
+    <color name="colorAccent">#4CAF50</color>
+    <color name="separatorColor">#80292929</color>
     <color name="actionModeBackground">@color/basicColor</color>
     <color name="navigationColor">#000000</color>
-    <color name="itemBackground">#404049</color>
-    <color name="selectorColor">@color/itemBackground</color>
+    <color name="textBoxColor">@color/colorPrimary</color>
+    <color name="itemBackground">#4e4e4e</color>
+    <color name="selectorColor">#313131</color>
     <color name="pressedColor">@color/itemBackground</color>
+    <color name="fabColorNewMessage">#036d73</color>
+    <color name="fabColorNormal">@color/colorPrimary</color>
     <color name="receivedMessage">#00B000</color>
     <color name="errorMessage">#b00c00</color>
     <color name="sentMessage">#FFFFFF</color>
