--- a/app/src/main/res/layout/list_json.xml
+++ b/app/src/main/res/layout/list_json.xml
@@ -18,6 +18,7 @@
         android:ellipsize="end"
         android:maxLines="1"
         android:paddingRight="5dp"
+        android:singleLine="true"
         android:textSize="16sp"
         android:textStyle="bold"
         />
