--- a/app/src/main/res/layout/list_message.xml
+++ b/app/src/main/res/layout/list_message.xml
@@ -11,18 +11,20 @@
     <TextView
         android:id="@+id/list_text"
         style="@style/primaryText"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ellipsize="end"
+        android:ellipsize="marquee"
+        android:singleLine="true"
         android:maxLines="1"
-        android:textSize="16sp"
+        android:textSize="14sp"
         android:textStyle="bold"
+        android:layout_marginBottom="2dp"
         />
 
     <TextView
         android:id="@+id/list_text2"
         style="@style/secondaryText"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="14sp"
         />
