--- a/app/src/main/res/layout/list.xml
+++ b/app/src/main/res/layout/list.xml
@@ -3,10 +3,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@drawable/checkable_item_background"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
-                android:paddingTop="15dp"
-                android:paddingBottom="15dp">
+                android:padding="15dp">
 
     <TextView
         android:id="@+id/text"
@@ -15,4 +12,5 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:textSize="16sp"/>
+
 </RelativeLayout>
