--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,8 +8,8 @@
         <item name="android:windowBackground">@color/windowBackground</item>
     </style>
 
-    <style name="marqueedText">
-        <item name="android:singleLine">true</item>
+    <style name="marqueeText">
+        <item name="android:maxLines">1</item>
         <item name="android:ellipsize">marquee</item>
     </style>
 
