--- a/app/src/main/res/layout/layout_server_action.xml
+++ b/app/src/main/res/layout/layout_server_action.xml
@@ -3,17 +3,41 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:padding="@dimen/abc_dialog_padding_material">
 
-    <EditText
-        android:id="@+id/layout_server_action_edit_text"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/layout_server_action_layout_title_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true">
+
+        <AutoCompleteTextView
+            android:id="@+id/layout_server_action_title_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/server_title"
+            android:maxLines="1"/>
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@id/layout_server_action_layout_title_text">
+
+        <AutoCompleteTextView
+            android:id="@+id/layout_server_action_address_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/server_address"/>
+
+    </android.support.design.widget.TextInputLayout>
 
 </RelativeLayout>
