--- a/app/src/main/res/layout/fragment_messenger.xml
+++ b/app/src/main/res/layout/fragment_messenger.xml
@@ -33,7 +33,7 @@
                     android:layout_weight="3"
                     android:background="#00000000"
                     android:gravity="center"
-                    android:hint="@string/enter_server"
+                    android:hint="@string/text_enterServerAddress"
                     android:inputType="textNoSuggestions|textShortMessage"
                     android:maxLines="1"
                     android:singleLine="true"
@@ -47,7 +47,7 @@
                     android:layout_weight="1"
                     android:background="#00000000"
                     android:gravity="center"
-                    android:hint="@string/enter_port"
+                    android:hint="@string/text_enterPort"
                     android:inputType="number"
                     android:maxLines="1"
                     android:singleLine="true"
@@ -61,7 +61,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="#00000000"
-                android:hint="@string/title_mode_text"
+                android:hint="@string/butn_textMode"
                 android:inputType="textMultiLine"
                 android:maxLines="4"
                 />
