--- a/app/src/main/res/menu/fragment_messenger.xml
+++ b/app/src/main/res/menu/fragment_messenger.xml
@@ -10,19 +10,19 @@
     <item
         android:id="@+id/menu_clear_list"
         android:icon="@drawable/ic_clear_all_white_24dp"
-        android:title="@string/clear_list"
+        android:title="@string/butn_clearList"
         app:showAsAction="always"/>
 
     <item
         android:id="@+id/menu_pair_finder"
-        android:title="@string/pair_finder" />
+        android:title="@string/text_peerFinder" />
 
     <item
         android:id="@+id/menu_template_list"
-        android:title="@string/template_list" />
+        android:title="@string/text_templateList" />
 
     <item
         android:id="@+id/menu_about"
-        android:title="@string/about" />
+        android:title="@string/butn_about" />
 
 </menu>
