--- a/app/src/main/res/menu/fragment_templatelist.xml
+++ b/app/src/main/res/menu/fragment_templatelist.xml
@@ -3,7 +3,7 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/menu_template_add"
-        android:title="@string/add_template"
+        android:title="@string/butn_addTemplate"
         android:icon="@drawable/ic_add_white_24dp"
         app:showAsAction="always"/>
 </menu>
