Move on to version 1.1.3

--- a/app/src/main/res/layout/fragment_messenger.xml
+++ b/app/src/main/res/layout/fragment_messenger.xml
@@ -83,7 +83,6 @@
         android:layout_above="@id/fragment_messenger_form_layout"
         android:layout_alignParentTop="true"
         android:divider="@color/colorPrimaryDark"
-        android:stackFromBottom="true"
-        />
+        android:stackFromBottom="true"/>
 
 </RelativeLayout>
